Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -32,9 +32,33 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h1>
-<a id="woodger" class="anchor" href="#woodger" aria-hidden="true"><span class="octicon octicon-link"></span></a>woodger</h1>
+<a id="readme-for-the-woodger-project" class="anchor" href="#readme-for-the-woodger-project" aria-hidden="true"><span class="octicon octicon-link"></span></a>README for the Woodger Project</h1>
 
-<p>Automated &amp; semi-automated proofs of theorems in J. H. Woodger's 'The Axiomatic Method in Biology'</p>
+<p>The Woodger Project aims to obtain automated or semi-automated proofs of statements in [1]. We use the SLATE graphical theorem prover [2], which is based on SNARK [3].</p>
+
+<p>Each file in this folder contains a proof in the SLATE format. The numbering scheme of [1] is followed. Files prefixed with 'tarski' contain proofs from Appendix E of [1], which is due to Alfred Tarski. The numbering scheme of this appendix is followed.</p>
+
+<h2>
+<a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h2>
+
+<p>[1] Woodger, J. H. "The axiomatic method in biology." Cambridge, England (1937).
+[2] <a href="http://rair.cogsci.rpi.edu/projects/slate/">http://rair.cogsci.rpi.edu/projects/slate/</a>.
+[3] <a href="http://www.ai.sri.com/%7Estickel/snark.html">http://www.ai.sri.com/~stickel/snark.html</a>.</p>
+
+<h2>
+<a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
+
+<p>Atriya Sen</p>
+
+<p>Graduate Student</p>
+
+<p>Rensselaer Artificial Intelligence and Reasoning Laboratory</p>
+
+<p>Troy, NY</p>
+
+<p>USA</p>
+
+<p><a href="mailto:sena2@rpi.edu">sena2@rpi.edu</a></p>
       </section>
     </div>
 
