Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -56,22 +56,18 @@
 <h2>
 <a id="references" class="anchor" href="#references" aria-hidden="true"><span class="octicon octicon-link"></span></a>References</h2>
 
-<p>[1] Woodger, J. H. "The axiomatic method in biology." Cambridge, England (1937).
-[2] <a href="http://rair.cogsci.rpi.edu/projects/slate/">http://rair.cogsci.rpi.edu/projects/slate/</a>.
-[3] <a href="http://www.ai.sri.com/%7Estickel/snark.html">http://www.ai.sri.com/~stickel/snark.html</a>.</p>
+<ol>
+<li>Woodger, J. H. "The axiomatic method in biology." Cambridge, England (1937).</li>
+<li>
+<a href="http://rair.cogsci.rpi.edu/projects/slate/">http://rair.cogsci.rpi.edu/projects/slate/</a>.</li>
+<li>
+<a href="http://www.ai.sri.com/%7Estickel/snark.html">http://www.ai.sri.com/~stickel/snark.html</a>.</li>
+</ol>
 
 <h2>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
 
 <p>Atriya Sen</p>
-
-<p>Graduate Student</p>
-
-<p>Rensselaer Artificial Intelligence and Reasoning Laboratory</p>
-
-<p>Troy, NY</p>
-
-<p>USA</p>
 
 <p><a href="mailto:sena2@rpi.edu">sena2@rpi.edu</a></p>
       </section>
