Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="ribbon-outer">
           <span class="ribbon-inner">
             <h1>Woodger</h1>
-            <h2>Automated &amp; semi-automated proofs of theorems in J. H. Woodger&#39;s &#39;The Axiomatic Method in Biology&#39;</h2>
+            <h2>Automated proofs of statements in Woodger&#39;s &#39;The Axiomatic Method in Biology&#39;</h2>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
