Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@
 <h2>
 <a id="contact" class="anchor" href="#contact" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contact</h2>
 
-<p>Atriya Sen</p>
-
-<p><a href="mailto:sena2@rpi.edu">sena2@rpi.edu</a></p>
+<p>Atriya Sen (<a href="mailto:sena2@rpi.edu">sena2@rpi.edu</a>)</p>
       </section>
 
       <footer>
